# py-bas-automation

./: .env.example  .gitattributes  .gitignore  .pydocstyle.ini  CHANGELOG.md  LICENSE  Makefile  PROMO.md  README.md  cmd_initial.py  cmd_worker.py  codecov.yml  pyproject.toml
.github/: dependabot.yml
.github/actions/linux/: action.yaml
.github/actions/windows/: action.yaml
.github/workflows/: ci.yml  ci_linux.yml  ci_windows.yml  pr_agent.yml  python-tests.yml  static.yml
.pypi/: README.md
pybas_automation/: __init__.py  settings.py
pybas_automation/bas_actions/: __init__.py
pybas_automation/bas_actions/browser/: __init__.py
pybas_automation/bas_actions/browser/browser_settings/: __init__.py  models.py
pybas_automation/bas_actions/browser/proxy/: __init__.py  models.py
pybas_automation/bas_actions/fingerprint_switcher/: __init__.py
pybas_automation/bas_actions/fingerprint_switcher/apply_fingerprint/: __init__.py  models.py
pybas_automation/browser_automator/: __init__.py  browser_automator.py  cdp_client.py  models.py  settings.py
pybas_automation/browser_profile/: __init__.py  models.py  proxy.py  settings.py  storage.py
pybas_automation/browser_remote/: __init__.py  browser_remote.py
pybas_automation/fingerprint/: __init__.py  fingerprint.py  models.py
pybas_automation/proxy_providers/brightdata/: __init__.py  models.py
pybas_automation/task/: __init__.py  models.py  settings.py  storage.py
pybas_automation/utils/: __init__.py  filesystem.py  logger.py  utils.py
scripts/: update_readme_links.py
tests/: __init__.py  conftest.py
tests/bas_actions/: __init__.py
tests/contrib/socks5_server/: server.py
tests/e2e/: __init__.py  conftest.py
tests/e2e/basic/: test_basic.py
tests/fixtures/: Actual.PyBasFree.xml.default.xml  Actual.PyBasFreeTemplate.xml.default.xml
tests/functional/: conftest.py
tests/functional/browser_automator/: test_browser_automator.py
tests/functional/browser_profile/: browser_base.py  test_browser_profile.py  test_browser_profile_proxy.py  test_browser_profile_storage.py
tests/functional/browser_profile/cassettes/: TestBrowserProfile.test_save_all.yaml  TestBrowserProfile.test_save_fingerprint.yaml  TestBrowserProfileStorage.test_create_no_fingerprint.yaml  TestBrowserProfileStorage.test_create_with_profile_name.yaml  TestBrowserProfileStorage.test_serialize_deserialize.yaml
tests/functional/browser_remote/: test_browser_remote.py
tests/functional/cmd/: test_cmd_initial.py  test_cmd_worker.py
tests/functional/cmd/cassettes/: TestCmdInitial.test_main.yaml  TestCmdInitial.test_main_proxy.yaml  TestCmdWorker.test_main.yaml  TestCmdWorker.test_main_proxy.yaml
tests/functional/fingerprint/: test_fingerprint.py
tests/functional/fingerprint/cassettes/: TestFingerprint.test_get_fingerprint.yaml
tests/functional/proxy_providers/: conftest.py
tests/functional/proxy_providers/brightdata/: test_brightdata.py
tests/functional/task/: conftest.py  test_storage.py
